; ModuleID = '/home/carl/AnghaBench/freebsd/sys/ddb/extr_db_break.c_db_breakpoint_cmd.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/ddb/extr_db_break.c_db_breakpoint_cmd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @db_breakpoint_cmd(i32 %0, i32 %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %9 = load i32, i32* %7, align 4
  %10 = icmp eq i32 %9, -1
  br i1 %10, label %11, label %12

11:                                               ; preds = %4
  store i32 1, i32* %7, align 4
  br label %12

12:                                               ; preds = %11, %4
  %13 = load i32, i32* %5, align 4
  %14 = call i32 @db_map_addr(i32 %13)
  %15 = load i32, i32* %5, align 4
  %16 = load i32, i32* %7, align 4
  %17 = call i32 @db_set_breakpoint(i32 %14, i32 %15, i32 %16)
  ret void
}

declare dso_local i32 @db_set_breakpoint(i32, i32, i32) #1

declare dso_local i32 @db_map_addr(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
